--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </div>
   </div>
-
+  <!-- Marija edits till here -->
   <!-- Ilija edits here -->
   <div class="ilija-sports">
     <div class="container px-4 py-5" id="custom-cards">
@@ -134,7 +134,7 @@
       </div>
     </div>
   </div>
-
+  <!-- Ilija edits till here -->
   <!-- Bojan edits here  -->
   <div class="bojan-sports">
     <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
@@ -146,7 +146,7 @@
       </div>
     </div>
   </div>
-
+  <!-- Bojan edits till here  -->
   <!-- Angela edits here -->
   <div class="angela-sports">
     <div class="container py-4">
@@ -205,7 +205,7 @@
       </div>
     </div>
   </div>
-
+  <!-- Angela edits till here -->
   <!-- Todor edits here  -->
   <div class="todor-sports">
     <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
@@ -217,6 +217,7 @@
       </div>
     </div>
   </div>
+  <!-- Todor edits till here  -->
   <!-- Elena edits here -->
   <div class="elena-sports">
     <footer class="bd-footer py-5 mt-5 bg-light">
@@ -291,7 +292,7 @@
       </div>
     </footer>
   </div>
-
+  <!-- Elena edits till here -->
 
 </body>
 
