--- a/index.html
+++ b/index.html
@@ -29,16 +29,12 @@
   <div class="marija-sports">
     <div class="bg-dark text-secondary px-4 py-5 text-center">
       <div class="py-5">
-        <h1 class="display-5 fw-bold text-white">Dark mode hero</h1>
+        <h1 class="display-5 fw-bold text-white"><span class="size">Welcome to</span> <i>All Sports Talk</i></h1>
         <div class="col-lg-6 mx-auto">
-          <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s
-            most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive
-            prebuilt components, and powerful JavaScript plugins.</p>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Custom button</button>
-            <button type="button" class="btn btn-outline-light btn-lg px-4">Secondary</button>
+          <p class="fs-6 mb-4 text-white">Explore our wide range of sportswear and accessories. Whether you're into running, yoga, or team sports, we've got everything you need to stay active and stylish.</p>
+          <div class="d-gaprid g-2 d-sm-flex justify-content-sm-center">
+            <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Shop Now</button>
+            <button type="button" class="btn btn-outline-light btn-lg px-4">Help</button>
           </div>
         </div>
       </div>
