Dodaden div blogplayers

--- a/index.html
+++ b/index.html
@@ -207,14 +207,25 @@
   </div>
   <!-- Angela edits till here -->
   <!-- Todor edits here  -->
-  <div class="todor-sports">
-    <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
-      <div class="col-md-6 px-0">
-        <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
-        <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently
-          about what’s most interesting in this post’s contents.</p>
-        <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
-      </div>
+  <div class="header">
+</div>
+<div class="todor-sports"></div>
+    <h1 class="football">Top 100 players</h1>
+    <h2 class="football">The Guardian's annual guide to the world's top players</h2>
+  
+    <a href="https://www.theguardian.com/football/series/the-100-best-footballers-in-the-world" title="The Guardian top 100 footballers in the world lists"
+     class="football100-2019__component-button" data-link-name="top 100 football 2023 : link">
+      
+      <svg class="icon" width="24" height="22" viewBox="0 0 24 22" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 12.0046H19.6395L11.9377 21.0205L12.939 22L23.6444 11.5023V10.4977L12.939 0L11.9377 0.979452L19.6395 9.99543H0V12.0046Z"></path>
+      </svg>
+      <span>You can be one of them...</span>
+    </a>
+     <img class="football100-2019__image" src="https://uploads.guim.co.uk/2023/01/31/100-football-2023-squashed.png">
+    <h3 class="football100-2019__100text">See more about best players on the world</h3>
+    <p><a href="#" class="text-black fw-bold">Continue reading...</a></p>
+  </div>
+    </div>
     </div>
   </div>
   <!-- Todor edits till here  -->
