--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title>All Sports Talk</title>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
@@ -27,11 +27,12 @@
   </header>
   <!-- Marija edits here -->
   <div class="marija-sports">
-    <div class="bg-dark text-secondary px-4 py-5 text-center">
+    <div class="text-secondary px-4 py-5 text-center">
       <div class="py-5">
         <h1 class="display-5 fw-bold text-white"><span class="size">Welcome to</span> <i>All Sports Talk</i></h1>
         <div class="col-lg-6 mx-auto">
-          <p class="fs-6 mb-4 text-white">Explore our wide range of sportswear and accessories. Whether you're into running, yoga, or team sports, we've got everything you need to stay active and stylish.</p>
+          <p class="fs-6 mb-4 ">Explore our wide range of sportswear and accessories. Whether you're into running, yoga,
+            or team sports, we've got everything you need to stay active and stylish.</p>
           <div class="d-gaprid g-2 d-sm-flex justify-content-sm-center">
             <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Shop Now</button>
             <button type="button" class="btn btn-outline-light btn-lg px-4">Help</button>
@@ -237,9 +238,11 @@
               <li class="mb-2"><a href="/">Address: Sava Kovacevic</a></li>
               <li class="mb-2"><a href="/docs/5.0/">Phone: 076-222-304</a></li>
               <li class="mb-2"><a href="/docs/5.0/examples/">sportsinfo@gmail.com</a></li>
-              <img width="48" height="48" src="https://img.icons8.com/color/48/facebook-circled--v1.png" alt="facebook-circled--v1"/>
-              <img width="48" height="48" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/>
-              <img width="48" height="48" src="https://img.icons8.com/color/48/twitter--v1.png" alt="twitter--v1"/>
+              <img width="48" height="48" src="https://img.icons8.com/color/48/facebook-circled--v1.png"
+                alt="facebook-circled--v1" />
+              <img width="48" height="48" src="https://img.icons8.com/fluency/48/instagram-new.png"
+                alt="instagram-new" />
+              <img width="48" height="48" src="https://img.icons8.com/color/48/twitter--v1.png" alt="twitter--v1" />
             </ul>
           </div>
           <div class="col-6 col-lg-2 mb-3">
@@ -262,4 +265,5 @@
   </div>
   <!-- Elena edits till here -->
 </body>
+
 </html>
