added 3 new images

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
       <h2 class="pb-2 border-bottom ">Best football players for this year</h2>
       <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg " 
-          style="background-image: url(images/download.jpg); background-repeat: no-repeat;">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+          <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg cristiano">
+            <div class=" d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1 cristiano" >
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Cristiano Ronaldo</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
@@ -75,9 +74,8 @@
         </div>
 
         <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-            style="background-image: url(images/mbappe.jpg); background-repeat: no-repeat;">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+          <div class="card card-cover h-100 overflow-hidden text-white  rounded-5 shadow-lg mbappe">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1 mbappe">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Kylian Mbappe</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
@@ -102,9 +100,8 @@
         </div>
 
         <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-            style="background-image: url(images/Haland.jpg); background-repeat: no-repeat;">
-            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg haland">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1 haland">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Erling Haland</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
