--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg cristiano">
-            <div class=" d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1 cristiano" >
+            <div class=" d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1 cristiano">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Cristiano Ronaldo</h2>
               <ul class="d-flex list-unstyled mt-auto">
                 <li class="me-auto">
@@ -200,31 +200,28 @@
   </div>
   <!-- Angela edits till here -->
   <!-- Todor edits here  -->
-  <div class="header">
-  </div>
-  <div class="todor-sports"></div>
-  <h1 class="football">Top 100 players</h1>
-  <h2 class="football">The Guardian's annual guide to the world's top players</h2>
 
-  <a href="https://www.theguardian.com/football/series/the-100-best-footballers-in-the-world"
-    title="The Guardian top 100 footballers in the world lists" class="football100-2019__component-button"
-    data-link-name="top 100 football 2023 : link">
+  <div class="todor-sports">
+    <h1 class="football">Top 100 players</h1>
+    <h2 class="football">The Guardian's annual guide to the world's top players</h2>
 
-    <svg class="icon" width="24" height="22" viewBox="0 0 24 22" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-      focusable="false">
-      <path fill-rule="evenodd" clip-rule="evenodd"
-        d="M0 12.0046H19.6395L11.9377 21.0205L12.939 22L23.6444 11.5023V10.4977L12.939 0L11.9377 0.979452L19.6395 9.99543H0V12.0046Z">
-      </path>
-    </svg>
-    <span>You can be one of them...</span>
-  </a>
-  <img class="football100-2019__image" src="https://uploads.guim.co.uk/2023/01/31/100-football-2023-squashed.png">
-  <h3 class="football100-2019__100text">See more about best players on the world</h3>
-  <p><a href="#" class="text-black fw-bold">Continue reading...</a></p>
+    <a href="https://www.theguardian.com/football/series/the-100-best-footballers-in-the-world"
+      title="The Guardian top 100 footballers in the world lists" class="football100-2019__component-button"
+      data-link-name="top 100 football 2023 : link">
+
+      <svg class="icon" width="24" height="22" viewBox="0 0 24 22" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+        focusable="false">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M0 12.0046H19.6395L11.9377 21.0205L12.939 22L23.6444 11.5023V10.4977L12.939 0L11.9377 0.979452L19.6395 9.99543H0V12.0046Z">
+        </path>
+      </svg>
+      <span>You can be one of them...</span>
+    </a>
+    <img class="football100-2019__image" src="https://uploads.guim.co.uk/2023/01/31/100-football-2023-squashed.png">
+    <h3 class="football100-2019__100text">See more about best players on the world</h3>
+    <p><a href="#" class="text-black fw-bold">Continue reading...</a></p>
   </div>
-  </div>
-  </div>
-  </div>
+
   <!-- Todor edits till here  -->
   <!-- Elena edits here -->
   <div class="elena-sports">
