--- a/index.html
+++ b/index.html
@@ -130,12 +130,14 @@
   <!-- Ilija edits till here -->
   <!-- Bojan edits here  -->
   <div class="bojan-sports">
-    <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
+    <div class="p-4 p-md-5 mb-4 text-white rounded bg-mbape">
+      
       <div class="col-md-6 px-0">
-        <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
-        <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently
-          about what’s most interesting in this post’s contents.</p>
-        <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
+        <h1 class="display-4 fst-italic">Азар со порака до Мбапе за неговиот трансфер во Реал: Направи го она што јас не можев…</h1>
+        <p class="lead my-3">По трансфер-сапуницата која траеше повеќе од една година, Килијан Мбапе (25) стана нов играч на Реал Мадрид. 
+          Француската суперѕвезда пристигна како слободен играч откако му истече договорот со ПСЖ. 
+          Мбапе ќе биде претставен на „Сантијаго Бернабеу“ откако Франција ќе заврши со настапите на престојното ЕВРО 2024. </p>
+        <p class="lead mb-0"><a href="#" class="text-white fw-bold">Дознај повеќе...</a></p>
       </div>
     </div>
   </div>
